--- a/index.html
+++ b/index.html
@@ -5,11 +5,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <title>Meu portfólio</title>
 </head>
 
 <body>
- <img src="img/avatar-perfil.png" alt="imagem avatar" title="imagem avatar">   
+    <header class="container text-center">
+  <img src="img/avatar-perfil.png" class="rounded-circle" width="150" height="150" alt="imagem avatar" title="imagem avatar Ivan"> 
+  <p class="lead">Eu sou rafael</p> 
+  <h1>Eu dou aulas no futebol </h1>
+  <p> Tenho 16 anos, dou aula de futsal</p>
+  <p> Minhas Habilidades</p>
+  <div>
+    <p class="badge bg-secondary">jogar</p>
+    <p class="badge bg-secondary">comer</p>
+    <p class="badge bg-secondary" >futsal</p>
+    <p class="badge bg-secondary">futebol</p>
+  </div>
+    </header>
+    <main class="container">
+      <h2> Meus Projetos </h2>
+      <div class="row"> 
+        <div class="col-md-4"></div> 
+
+        
+
+      </div>
+
+
+
+    </main>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 </body>
 
-</html> 
+</html>
