--- a/index.html
+++ b/index.html
@@ -26,7 +26,20 @@
     <main class="container">
       <h2> Meus Projetos </h2>
       <div class="row"> 
-        <div class="col-md-4"></div> 
+        <div class="col-md-4">
+          <div class="card" >
+            <img src="img/projeto-1.png" class="card-img-top" alt=" apresentação do projeto-1" title="projeto-1">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+
+
+
+
+        </div> 
 
         
 
